feat: Implement explore functionality with categories and services filtering
- Added JavaScript for exploring services with category filtering and search functionality.
- Created HTML templates for exploring services, admin dashboard, provider dashboard, and user dashboard.
- Implemented responsive design and user interface for service management.
- Introduced forms for creating new services with validation.
- Enhanced user experience with dynamic updates and KPI displays.