@@ -65,18 +65,41 @@ public class AuthController {
         try {
             Usuario usuario = usuarioService.login(loginDTO.getEmail(), loginDTO.getContrasena());
             session.setAttribute("usuarioLogueado", usuario);
-            String role = "UNKNOWN";
-            if (usuario.getRoles() != null && !usuario.getRoles().isEmpty() && usuario.getRoles().get(0) != null) {
-                role = usuario.getRoles().get(0).getNombreRol();
+
+            String redirect = "/explorar"; // default para cliente
+            java.util.List<String> rolesList = new java.util.ArrayList<>();
+            boolean tieneAdmin = false;
+            boolean tieneProveedor = false;
+            String fallbackRole = null;
+
+            if (usuario.getRoles() != null && !usuario.getRoles().isEmpty()) {
+                for (var r : usuario.getRoles()) {
+                    if (r == null || r.getNombreRol() == null) continue;
+                    String raw = r.getNombreRol();
+                    String upper = raw.trim().toUpperCase();
+                    rolesList.add(raw);
+                    if (fallbackRole == null) fallbackRole = upper;
+                    logger.info("Rol detectado para {}: raw='{}' upper='{}'", loginDTO.getEmail(), raw, upper);
+                    if (upper.contains("ADMINISTRADOR")) tieneAdmin = true;
+                    if (esRolProveedor(upper)) tieneProveedor = true;
+                }
             }
 
-            return ResponseEntity.ok(
-                Map.of(
-                    "success", true,
-                    "role", role,
-                    "redirect", "/explorar"
-                )
-            );
+            String principalRole = fallbackRole != null ? fallbackRole : "CLIENTE";
+            if (tieneAdmin) {
+                principalRole = "ADMINISTRADOR";
+                redirect = "/dashboard"; // controlador decide plantilla admin
+            } else if (tieneProveedor) {
+                principalRole = "PROVEEDOR";
+                redirect = "/dashboard"; // unificado en una sola ruta
+            }
+
+            return ResponseEntity.ok(Map.of(
+                "success", true,
+                "role", principalRole,
+                "roles", rolesList,
+                "redirect", redirect
+            ));
         } catch (IllegalArgumentException e) {
             logger.warn("Login inválido para email {}: {}", loginDTO.getEmail(), e.getMessage());
             return ResponseEntity.badRequest().body(Collections.singletonMap("error", e.getMessage()));
@@ -118,11 +141,63 @@ public class AuthController {
     public ResponseEntity<?> verificarSolicitud(HttpSession session) {
         Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Debes estar logueado"));
+            return ResponseEntity.ok(Map.of("tieneSolicitud", false, "estado", null));
         }
 
-        boolean tieneSolicitud = solicitudProveedorService.usuarioTieneSolicitud(usuario);
-        return ResponseEntity.ok(Map.of("tieneSolicitud", tieneSolicitud));
+        try {
+            String estado = solicitudProveedorService.obtenerEstadoSolicitud(usuario);
+            boolean tieneSolicitud = estado != null;
+            return ResponseEntity.ok(Map.of("tieneSolicitud", tieneSolicitud, "estado", estado));
+        } catch (Exception e) {
+            logger.error("Error verificando solicitud de proveedor para usuario {}", usuario.getEmail(), e);
+            return ResponseEntity.ok(Map.of("tieneSolicitud", false, "estado", null));
+        }
+    }
+
+    @GetMapping("/logout")
+    public ResponseEntity<?> logout(HttpSession session) {
+        try {
+            session.invalidate();
+        } catch (Exception ignored) {}
+        return ResponseEntity.ok(Map.of(
+            "success", true,
+            "redirect", "/"
+        ));
+    }
+
+    @GetMapping("/destino")
+    public ResponseEntity<?> destino(HttpSession session) {
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+        if (usuario == null) {
+            return ResponseEntity.ok(Map.of(
+                "logged", false,
+                "redirect", "/explorar"
+            ));
+        }
+
+        String redirect = "/explorar"; // cliente por defecto
+        boolean admin = false;
+        boolean proveedor = false;
+        if (usuario.getRoles() != null) {
+            for (var r : usuario.getRoles()) {
+                if (r == null || r.getNombreRol() == null) continue;
+                String upper = r.getNombreRol().trim().toUpperCase();
+                if (upper.contains("ADMINISTRADOR")) admin = true;
+                if (esRolProveedor(upper)) proveedor = true;
+            }
+        }
+        if (admin || proveedor) {
+            redirect = "/dashboard";
+        }
+        return ResponseEntity.ok(Map.of(
+            "logged", true,
+            "redirect", redirect
+        ));
+    }
+
+    private boolean esRolProveedor(String nombreNormalizado) {
+        if (nombreNormalizado == null) return false;
+        return nombreNormalizado.contains("PROVEEDOR") || nombreNormalizado.contains("OPERADOR");
     }
 }
 
